# kawa-fork

./: .gitignore  .gitlab-ci.yml  ChangeLog  Make-rules  Makefile.am  autogen.sh  build.properties  build.xml  config.classpath  configure.ac  source-list
doc/: ChangeLog  Makefile.am  browse-kawa-manual  kashell.md  kashell.texi  kawa.texi  news.texi  with-frames.html
gnu/: ChangeLog  Makefile.am  Makefile.in
gnu/bytecode/: AnnotationEntry.java  ArrayType.java  AttrContainer.java  Attribute.java  ChangeLog  ClassType.java  ClassTypeWriter.java  CodeAttr.java  ConstantValueAttr.java  ExceptionsAttr.java  ExitableBlock.java  Field.java  Fragment.java  Label.java  ListCodeSize.java  LocalVarsAttr.java  Location.java  Makefile.am  Member.java  Method.java  ObjectType.java  ParameterizedType.java  PrimType.java  RuntimeAnnotationsAttr.java  RuntimeParameterAnnotationsAttr.java  SourceDebugExtAttr.java  SourceFileAttr.java  SpecialObjectType.java  SwitchState.java  Type.java  TypeVariable.java  Variable.java
kawa/: ChangeLog  DomTermBackend.java  DomTermServer.java  Shell.java  repl.java
testsuite/: ChangeLog  ListCodeSize.java  Makefile.am  Makefile.in  alexp1.scm  annotations-on-parameter.scm  annotations1-bytecode.expected  arr-test.scm  array1.scm  case-warnings.scm  charset1.scm  circlist.scm  classes1.scm  classes2.scm  cont-test.scm  continuations1.scm  convert1.scm  errors3.scm  eval1.scm  formatst.scm  gl110.scm  inline6.scm  inlining-test.scm  inlining.expected  jmc.expected  jmc.scm  lib-test.scm  match1.scm  methods1.scm  misc-test.scm  module3.scm  (+12 more)
(+185 files in other folders)
